--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   arrow_path: ^3.1.0
   flutter_screenutil: ^5.9.0
+  freezed_annotation: ^2.4.1
+  freezed: ^2.4.7
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
+  get_it: ^7.6.7
+  flutter_bloc: ^8.1.3
+  dio: ^5.4.0
+  retrofit: ^4.1.0
+  retrofit_generator: ^8.1.0
+  pretty_dio_logger: ^1.3.1
+  intl: ^0.19.0
+  build_runner: ^2.4.8
 
 dev_dependencies:
   flutter_test:
